cfn_benchmark/cfn_templates/jwiegant__aws-cloudformation-templates/envoyer.io/aws_envoyer_security_group.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Security Group for Envoyer",
  "Parameters": {
    "VPC": {
      "Type": "AWS::EC2::VPC::Id",
      "Description": "VPC where the Security Group will belong"
    },
    "Name": {
      "Type": "String",
      "Description": "Name Tag of the Security Group"
    },
    "Description": {
      "Type": "String",
      "Description": "Description Tag of the Security Group"
    }
  },
  "Resources": {
    "EnvoyerSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": {
          "Ref": "Description"
        },
        "VpcId": {
          "Ref": "VPC"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "CidrIp": "159.65.47.205/32",
            "FromPort": "22",
            "ToPort": "22",
            "Description": "Envoyer SSH"
          },
          {
            "IpProtocol": "tcp",
            "CidrIp": "157.245.120.132/32",
            "FromPort": "22",
            "ToPort": "22",
            "Description": "Envoyer SSH"
          },
          {
            "IpProtocol": "tcp",
            "CidrIp": "134.122.14.47/32",
            "FromPort": "22",
            "ToPort": "22",
            "Description": "Envoyer SSH"
          },
          {
            "IpProtocol": "tcp",
            "CidrIp": "198.199.84.22/32",
            "FromPort": "443",
            "ToPort": "443",
            "Description": "Envoyer Heartbeat - New York"
          },
          {
            "IpProtocol": "tcp",
            "CidrIp": "167.71.140.19/32",
            "FromPort": "443",
            "ToPort": "443",
            "Description": "Envoyer Heartbeat - London"
          },
          {
            "IpProtocol": "tcp",
            "CidrIp": "167.71.208.72/32",
            "FromPort": "443",
            "ToPort": "443",
            "Description": "Envoyer Heartbeat - Singapore"
          }
        ]
      }
    }
  },
  "Outputs": {
    "SecurityGroupID": {
      "Description": "Security Group ID",
      "Value": {
        "Ref": "EnvoyerSG"
      }
    }
  }
}
